Add create user post method
